--- a/Sphera/CMakeLists.txt
+++ b/Sphera/CMakeLists.txt
@@ -17,10 +17,8 @@ qt_add_qml_module(appSphera
     VERSION 1.0
     QML_FILES
         Main.qml
-        RESOURCES Icons/book.png Icons/play.png Icons/settings.png Icons/stack.png Icons/timelapse.png
-        RESOURCES Icons/plus.png Icons/pause.png Icons/pause.svg Icons/play.svg
-        RESOURCES Icons/book.svg Icons/plus.png
-        RESOURCES Icons/plus.svg Icons/settings.svg Icons/stack.svg Icons/timelapse.svg Icons/book.svg
+        RESOURCES Icons/pause.svg Icons/play.svg
+        RESOURCES Icons/book.svg Icons/plus.svg Icons/settings.svg Icons/stack.svg Icons/timelapse.svg Icons/book.svg
         RESOURCES Icons/Background.png
 )
 
